[tool.poetry]
name = "railway-tut-01"
version = "0.1.0"
description = ""
authors = ["Johannes Gutekunst <johannes.gutekunst@t-online.de>"]
readme = "README.md"
packages = [{ include = "main.py" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
vtk = "^9.2.5"
fastapi = "^0.88.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
python-multipart = "^0.0.5"
aiofiles = "^22.1.0"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
